# saipt

./: .gitignore  README.md
ch08/inc/: s08_00101.hpp  s08_00102.hpp  s08_00103.hpp  s08_00104.hpp  s08_00203.hpp
ch08/src/: s08_00101.cpp  s08_00102.cpp  s08_00104.cpp  s08_00105.cpp  s08_00200.cpp  s08_00201.cpp  s08_00202.cpp  s08_00203.cpp  s08_00301.cpp  s08_00302.cpp  s08_00303.cpp  s08_00304.cpp  s08_00401.cpp  s08_00402.cpp  s08_00501.cpp  s08_00502.cpp  s08_00503.cpp  s08_00504.cpp  s08_00601.cpp  s08_00701.cpp  s08_00801.cpp  s08_00802.cpp  s08_00803.cpp  s08_00804.cpp  s08_00901.cpp  s08_00902.cpp  s08_00903.cpp  xx1.cpp  xx2.cpp
ch09/src/: s09_00201.cpp
ch11/src/: s09_00101.cpp  s09_00102.cpp  s09_00202.cpp
ch12/inc/: s16_00101.hpp  s16_00301.hpp
ch12/src/: s16_00101.cpp  s16_00201.cpp  s16_00202.cpp  s16_00203.cpp  s16_00207.cpp  s16_00208.cpp  s16_00209.cpp  s16_00210.cpp
ch14/: CMakeLists.txt
ch14/inc/: s14_00101a.hpp  s14_00101b.hpp
ch14/src/: s14_00101.cpp  s14_00101a.cpp  s14_00101b.cpp
ch16/: CMakeLists.txt
ch16/inc/: m16_001.hpp  m16_002.hpp  m16_003.hpp  m16_004.hpp  m16_005.hpp  s16_00301.hpp  s16_0101.hpp  s16_0102.hpp
ch16/src/: m16_001.cpp  m16_002.cpp  s16_00205.cpp  s16_00301.cpp  s16_0101.cpp  s16_0102.cpp  s16_0201.cpp  s16_0202.cpp  s16_0203.cpp  s16_0204.cpp  s16_0205.cpp  s16_0206.cpp  s16_0208.cpp  s16_0209.cpp
ch17/: CMakeLists.txt
ch17/src/: s17_00101.cpp  s17_00201.cpp  s17_00202.cpp  s17_00203.cpp  s17_00401.cpp  s17_00402.cpp  s17_00403.cpp  s17_00501.cpp  s17_00502.cpp  s17_00503.cpp  s17_00504.cpp  s17_00601.cpp  s17_00701.cpp  s17_00702.cpp  s17_00703.cpp  s17_00801.cpp  s17_00901.cpp  s17_01001.cpp
ch18/: CMakeLists.txt
ch18/inc/: s18_00101.hpp  s18_00201.hpp  s18_00202.hpp  s18_00203a.hpp  s18_00203c.hpp  s18_00203d.hpp  s18_00203e.hpp  s18_00301.hpp
ch18/src/: s18_00101.cpp  s18_00102.cpp  s18_00201.cpp  s18_00202.cpp  s18_00203a.cpp  s18_00203b.cpp  s18_00203c.cpp  s18_00203d.cpp  s18_00203e.cpp  s18_00301.cpp  s18_00302.cpp
ch19/: CMakeLists.txt
ch19/inc/: s19_00101.hpp  s19_00102.hpp  s19_00303.hpp  s19_00401.hpp
ch19/src/: s19_00101.cpp  s19_00102.cpp  s19_00201.cpp  s19_00202.cpp  s19_00203.cpp  s19_00301.cpp  s19_00302.cpp  s19_00303.cpp  s19_00401.cpp  s19_00501.cpp  s19_00601.cpp
ch20/: CMakeLists.txt
ch20/inc/: s20_0101.hpp  s20_0102.hpp  s20_0103.hpp  s20_0104.hpp  s20_0105.hpp
ch20/src/: s20_0101.cpp  s20_0102.cpp  s20_0103.cpp  s20_0104.cpp  s20_0105.cpp  s20_0201.cpp  s20_0202.cpp
ch22/: CMakeLists.txt
ch22/inc/: s22_00101.hpp
ch22/src/: s22_00101.cpp
ch23/: CMakeLists.txt
ch23/inc/: s23_00101.hpp
ch23/src/: s23_00101.cpp
ch24/inc/: s34_01101.hpp
ch24/src/: s34_01101.cpp  s34_01101a.cpp  s34_01101b.cpp  s34_01101c.cpp  s34_01101d.cpp  s34_01101e.cpp  s34_01101f.cpp
